src/objects/INT_Garantias_Siniestros__c.object
<CustomObject>
    <description>Contiene información de las garantías de siniestros asociadas a los movimientos que se envían a las aseguradoras</description>
    <fields>
        <fullName>IGS_DIV_Importe_IVA__c</fullName>
        <label>Importe IVA</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGS_DIV_Importe_Reserva_Garantia__c</fullName>
        <description>Importe de la Reserva de las Garantías que se envía a las aseguradoras</description>
        <label>Importe de la Reserva de Garantía</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGS_FOR_Importe_IVA__c</fullName>
        <description>Importe del IVA de la garantía</description>
        <formula>IGS_DIV_Importe_Reserva_Garantia__c  *  IGS_LKP_Movimiento_CIA__r.MOV_NUM_Porcentaje_IVA__c/100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe de IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGS_FOR_Importe_Reserva_Garantia_Sin_IVA__c</fullName>
        <description>Importe de la garantía sin IVA</description>
        <formula>IGS_DIV_Importe_Reserva_Garantia__c  *  (1 - IGS_LKP_Movimiento_CIA__r.MOV_NUM_Porcentaje_IVA__c/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Importe Reserva de garantía sin IVA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IGS_LKP_Movimiento_CIA__c</fullName>
        <description>Movimiento que se envía a la aseguradora asociado a la garantía de siniestro</description>
        <label>Integraciones: Movimiento CIA</label>
        <referenceTo>INT_Movimiento_CIA__c</referenceTo>
        <relationshipLabel>Integraciones: Garantías Siniestros</relationshipLabel>
        <relationshipName>Integraciones_Garantias_Siniestros</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>IGS_TXT_Codigo_Garantia__c</fullName>
        <description>Código de garantía asociada a los movimientos que se envían a la aseguradora</description>
        <label>Código de Garantía</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Integraciones: Garantías Siniestros</label>
    <nameField>
        <label>Nombre de Integraciones: Garantías Siniestros</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integraciones: Garantías Siniestros</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>